# cargo-component

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  README.md  WIT  build.rs
.github/workflows/: github-release.yml  main.yml  publish-binaries.yml  publish-to-crates-io.yml
adapters/: wasi_snapshot_preview1.wasm
adapters/040ec92/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.proxy.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/0d5ca07/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/134dddc/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/1f93e4e/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/2750b73/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/2ad057d/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/2da78ca/: wasi_snapshot_preview1.reactor.wasm
adapters/6613acd/: wasi_snapshot_preview1.command.wasm
adapters/6f0da84/: wasi_snapshot_preview1.command.wasm
adapters/7b9189b/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/7f4d569/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/92ccdcb/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/ab5a448/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.proxy.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/d1a7628/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/e250334/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/fd1e948/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
ci/: publish.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  keyring.rs  lib.rs  lock.rs  progress.rs  registry.rs  terminal.rs
crates/macro/: Cargo.toml  build.rs
crates/macro/src/: lib.rs
crates/wit/: Cargo.toml  README.md  build.rs
crates/wit/src/: commands.rs  config.rs  lib.rs  lock.rs
crates/wit/src/commands/: add.rs  build.rs  init.rs  key.rs  publish.rs  pull.rs  update.rs
crates/wit/tests/: add.rs  build.rs  init.rs  key.rs  publish.rs  update.rs  version.rs
crates/wit/tests/support/: mod.rs
docs/design/: registries.md
example/: Cargo.toml  README.md  backend.wit  cache.wit  world.wit
example/src/: bindings.rs  lib.rs
example/wit/: example.wit
src/: bindings.rs  commands.rs  config.rs  generator.rs  git.rs  lib.rs  lock.rs  log.rs  metadata.rs  registry.rs  signing.rs  target.rs
src/commands/: add.rs  bindings.rs  build.rs  check.rs  clippy.rs  doc.rs  key.rs  metadata.rs  new.rs  publish.rs  registry.rs  signing.rs  update.rs  upgrade.rs  wit.rs
src/registry/: local.rs
tests/: add.rs  bench.rs  build.rs  check.rs  clippy.rs  doc.rs  help.rs  key.rs  metadata.rs  new.rs  publish.rs  registry.rs  run.rs  signing.rs  test.rs  update.rs  upgrade.rs  version.rs  wit.rs
tests/support/: mod.rs
