[package]
name = "cargo-component"
description = "A cargo extension for authoring WebAssembly components"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component-model"]
repository = "https://github.com/bytecodealliance/cargo-component"

[dependencies]
cargo-component-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml_edit = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
heck = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
wit-bindgen-rust = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-parser = { workspace = true }
wit-component = { workspace = true }
wasm-metadata = { workspace = true }
wasmparser = { workspace = true }
parse_arg = { workspace = true }
cargo_metadata = { workspace = true }
cargo-config2 = { workspace = true }
libc = { workspace = true }
warg-protocol = { workspace = true }
warg-crypto = { workspace = true }
warg-client = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
which = { workspace = true }
shell-escape = "0.1.5"
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
wat = { workspace = true }
warg-server = { workspace = true }
tempfile = { workspace = true }
wasmprinter = { workspace = true }

[workspace]
members = ["crates/core", "crates/wit"]

[workspace.dependencies]
cargo-component-core = { path = "crates/core", version = "0.11.0" }
warg-protocol = "0.6.0"
warg-crypto = "0.6.0"
warg-client = "0.6.0"
warg-credentials = "0.6.0"
warg-server = "0.6.0"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
toml_edit = { version = "0.22.9", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
heck = "0.5.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
indexmap = "2.2.6"
url = { version = "2.5.0", features = ["serde"] }
wit-parser = "0.202.0"
wit-component = "0.202.0"
wasm-metadata = "0.202.0"
parse_arg = "0.1.4"
cargo_metadata = "0.18.1"
cargo-config2 = "0.1.24"
libc = "0.2.153"
owo-colors = "4.0.0"
unicode-width = "0.1.11"
p256 = "0.13.2"
rand_core = "0.6.4"
rpassword = "7.3.1"
futures = "0.3.30"
bytes = "1.6.0"
which = "6.0.1"
wit-bindgen-rust = "0.24.0"
wit-bindgen-core = "0.24.0"
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
wasmparser = "0.202.0"
wat = "1.202.0"
wasmprinter = "0.202.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "debuginfo"
