[package]
name = "cargo-component"
description = "A cargo extension for authoring WebAssembly components"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[workspace.package]
version = "0.21.1"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component-model"]
repository = "https://github.com/bytecodealliance/cargo-component"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cargo_metadata = { workspace = true }
cargo-component-core = { workspace = true }
cargo-config2 = { workspace = true }
git2 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
heck = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
p256 = { workspace = true }
parse_arg = { workspace = true }
pretty_env_logger = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-escape = "0.1.5"
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml_edit = { workspace = true }
url = { workspace = true }
wasi-preview1-component-adapter-provider = { workspace = true }
wasm-metadata = { workspace = true }
wasm-pkg-client = { workspace = true }
wasmparser = { workspace = true }
which = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
warg-client = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-server = { workspace = true }
wasmprinter = { workspace = true }
wat = { workspace = true }

[workspace]
members = ["crates/core"]

[workspace.dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.14"
bytes = "1.6.0"
cargo_metadata = "0.19.1"
cargo-component-core = { path = "crates/core", version = "0.21.1" }
cargo-config2 = "0.1.24"
git2 = { version = "0.20.1", default-features = false }
clap = { version = "4.5.4", features = ["derive", "env"] }
dirs = "5"
futures = "0.3.30"
heck = "0.5.0"
indexmap = "2.2.6"
libc = "0.2.153"
log = "0.4.21"
oci-distribution = "0.11"
owo-colors = "4.0.0"
p256 = "0.13.2"
parse_arg = "=0.1.4"
predicates = "3.1.0"
pretty_env_logger = "0.5.0"
rand_core = "0.6.4"
rpassword = "7.3.1"
semver = "1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
tokio = { version = "1.37.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-util = "0.7.10"
toml_edit = { version = "0.22.9", features = ["serde"] }
unicode-width = "0.2.0"
url = { version = "2.5.0", features = ["serde"] }
warg-client = "0.9.0"
warg-crypto = "0.9.0"
warg-protocol = "0.9.0"
warg-server = "0.9.0"
wasi-preview1-component-adapter-provider = "29.0.1"
wasm-metadata = "0.227.0"
wasm-pkg-client = "0.9.0"
wasmparser = "0.227.0"
wasmprinter = "0.227.0"
wat = "1.220.0"
which = "6.0.1"
wit-bindgen-core = "0.41.0"
wit-bindgen-rust = "0.41.0"
wit-component = "0.227.0"
wit-parser = "0.227.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "debuginfo"
