[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.8.0", features = ["realloc"], default-features = false }

[package.metadata.component]
package = "example:component"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
