[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = { path = "../crates/bindings" }

[package.metadata.component]
package = "example:component"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[workspace]
