[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.19.1", default-features = false, features = ["realloc"]}

[package.metadata.component]
package = "example:component"

[package.metadata.component.dependencies]

[workspace]
