[package]
name = "cargo-component-bindings"
description = "A crate for generating bindings of WebAssembly components."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
cargo-component-macro = { workspace = true }
wit-bindgen = { version = "0.13.0", default-features = false, features = ["realloc"]}
