[package]
name = "cargo-component-core"
version = "0.1.0"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
description = "The core library for cargo-component."
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cargo-component-core"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component-model"]
repository = "https://github.com/bytecodealliance/cargo-component/tree/main/crates/core"

[dependencies]
anyhow = { workspace = true }
keyring = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-client = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_System",
]
