[package]
name = "cargo-component-core"
description = "The core library for cargo-component."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-client = { workspace = true }
warg-credentials = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
clap = { workspace = true }
thiserror = "1.0.58"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_Console",
]
