[package]
name = "cargo-component-macro"
version = "0.1.0"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
description = "A proc-macro for generating bindings of WebAssembly components."
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cargo-component-bindings"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component model"]
repository = "https://github.com/bytecodealliance/cargo-component/tree/main/crates/macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }
wit-bindgen-rust-lib = { workspace = true }
wit-component = { workspace = true }
heck = { workspace = true }
