[package]
name = "wit"
description = "A tool for building and publishing WIT packages to a registry."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
cargo-component-core = { path = "../core" }
anyhow = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
toml_edit = { workspace = true }
warg-protocol = { workspace = true }
warg-client = { workspace = true }
warg-crypto = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
rand_core = { workspace = true }
p256 = { workspace = true }
indexmap = { workspace = true }
wit-parser = { workspace = true }
wit-component = { workspace = true }
wasm-metadata = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
warg-server = "0.1.0"
tokio-util = { workspace = true }
wasmparser = "0.113.2"
