[package]
name = "wit"
# This tool has an independent version from `cargo-component`.
version = "0.15.0-dev"
description = "A tool for building and publishing WIT packages to a registry."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cargo-component-core = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
p256 = { workspace = true }
pretty_env_logger = { workspace = true }
rand_core = { workspace = true }
rpassword = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
url = { workspace = true }
wasm-pkg-client = { workspace = true }
wasm-metadata = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
warg-client = { workspace = true }
warg-crypto = { workspace = true }
warg-protocol = { workspace = true }
warg-server = { workspace = true }
tokio-util = { workspace = true }
wasmparser = { workspace = true }
tempfile = { workspace = true }
